Changelog for logilab database package
======================================

  --  1.8.0
    * process_cursor (closes #77769)
    * new "at_tz" function to get back a timestamp at a given time-zone (closes #81267)

2011-10-17 -- 1.7.0
    * new WEEKDAY date extraction function
    * sqlserver support for other existing date extraction function, added
	helper to get list of VIEWs

2011-08-05  --  1.6.3
    * closes #72219: sqlserver doesn't support TRUE/FALSE



2011-07-27  --  1.6.2
    * actually fix sqlite boolean type to use 0 and 1 properly



2011-07-27  --  1.6.1
    * [fti] exclude numbers from stop words in fti parser (closes: #69471)

    * fix backup/restore commands for sqlite backend (closes: #69607)

    * fix checking of maximum number of function (closes: #71413)

    * support for COUNT(DISTINCT ...) (closes: #71414)

    * sqlite has no boolean type, should use 0 and 1



2011-06-09  --  1.6.0
    * new CAST function

    * new methods on db_helpers to support regexp-based pattern
      matching, using a REGEXP operator

    * support BigInt mapping

    * added sql_restart_sequence to dbhelper classes

    * tz datetime fix (don't return datetime with tz info set )

    * use logging and not print statements (closes #64792)



2011-04-01  --  1.5.0
    * fix deprecation warning and depend on common 0.55.2

    * TZ datetime and time support



2011-03-28  --  1.4.0
    * abstract OFFSET LIMIT support (incl. support for MSSQL)



2011-01-13  --  1.3.2
    * fix index dropping on sql server 2005

    * new sql_rename_table function on db helper

    * sqlite: fix restore command



2010-10-11  --  1.3.1
    * nice repr() on dbhelper

    * fix binary column value conversion by dbhelper.binary_value



2010-09-23  --  1.3.0
    * methods to create/remove multi-columns unique index updated to
      return a list of sql statements and renamed to
      sqls_create_multicol_unique_index / sqls_drop_multicol_unique_index.