@@ -301,13 +301,7 @@ class _PGAdvFuncHelper(db._GenericAdvFuncHelper):
 
     def has_fti_table(self, cursor):
         if super(_PGAdvFuncHelper, self).has_fti_table(cursor):
-            cursor.execute('SELECT version()')
-            version = cursor.fetchone()[0].split()[1].split(',')[0]
-            version = [int(i) for i in version.split('.')]
-            if version >= [8, 3, 0]:
-                self.config = 'simple'
-            else:
-                self.config = 'default'
+            self.config = 'simple'
         return self.fti_table in self.list_tables(cursor)
 
     def cursor_index_object(self, uid, obj, cursor):
